🎄 Add Brance Name

--- a/.github/workflows/formatCode.yml
+++ b/.github/workflows/formatCode.yml
@@ -19,4 +19,4 @@ jobs:
           git config --global user.email 'codeformat@connorcode.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git commit -am "Automated Code Formatting"
-          git push
+          git push origin HEAD:master
