--- a/.github/workflows/publishPackage.yml
+++ b/.github/workflows/publishPackage.yml
@@ -12,6 +12,6 @@ jobs:
         registry-url: https://npm.pkg.github.com/
         scope: "@Basicprogrammer10"
     - run: echo "registry=https://npm.pkg.github.com/@Basicprogrammer10" >> .npmrc
-    - run: npm publish $(ls *.tgz)
+    - run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
