--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "./tests.sh"
   },
   "repository": {
     "type": "git",
