--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,15 @@ jobs:
       - run: rm package-lock.json
       - run: yarn install
       - run: yarn test
+
+  runUiTests:
+    name: Run UI tests with Cypress
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12"
+      - run: npm install
+      - run: npm test
