--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,5 @@ jobs:
         with:
           node-version: "12"
       - run: npm install
-      - run: npm test
+      - run: node server.js --debug &
+      - run: npx cypress run
