--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           node-version: "12"
       - run: npm install
+      - run: npx tsc
       - run: npx jest
 
   runUiTests:
