Revert " 🤳 Run actions self-hosted"

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI
 on: [push, pull_request]
 jobs:
   format:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
         with:
@@ -20,10 +20,9 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git commit -am "💎 Automated Code Formatting"
           git push origin HEAD:master
-
   runTests:
     name: Run Unit Tests with Jest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node.js
@@ -36,7 +35,7 @@ jobs:
 
   runUiTests:
     name: Run UI tests with Cypress
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node.js
@@ -49,7 +48,7 @@ jobs:
 
   runRustTests:
     name: Run Rust Unit Tests
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       
