--- a/auto_commit/config.ini
+++ b/auto_commit/config.ini
@@ -9,3 +9,8 @@ message = "Auto-Commit: #$2"
 
 # File to commit
 file = "nose"
+
+# The $1 is the commit number (Comming Soon)
+# The $2 is the current date
+# The $3 is a random number
+contents = "nose - $3"
