--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,6 @@ jobs:
     name: Fossa Check
     steps:
       - uses: actions/checkout@v2
-      - run: "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash"
+      - run: "sudo curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
       - run: fossa init
       - run: FOSSA_API_KEY=7bff3c71cc4832d41199fbadc691958d fossa analyze
