--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Deploy with ampersand
-        uses: Basicprogrammer10/ampersand@v0.0.1-beta
+        uses: Basicprogrammer10/ampersand@v0.0.1-beta-2
         with:
           ampersand_server: "https://connorcode.com"
           ampersand_token: "B*9+2*+)n][B^<ru:c9[$DA1R>97XKVwX9=y!q@NAvVdFJnvdG4T?j<s)(ht>B%B"
