--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Deploy with ampersand
-        uses: Basicprogrammer10/ampersand@v0.0.1-beta-2
+        uses: Basicprogrammer10/ampersand@v0.0.1-beta-3
         with:
-          ampersand_server: "https://connorcode.com"
+          ampersand_server: "https://ad3c-149-102-226-194.ngrok-free.app/"
           ampersand_token: "B*9+2*+)n][B^<ru:c9[$DA1R>97XKVwX9=y!q@NAvVdFJnvdG4T?j<s)(ht>B%B"
           ampersand_project: "connorcode"
